Renamed templates to files

--- a/templates/registry/nginx/chunks/registry-auth.conf.erb
+++ b/templates/registry/nginx/chunks/registry-auth.conf.erb
@@ -5,7 +5,7 @@ map $uri $gitlab_token {
 # if authorization via SSL is successfull then setup token
 # http://nginx.org/en/docs/http/ngx_http_ssl_module.html#ssl_verify_client
 map  $ssl_client_verify $ssl_authorization {
-  "SUCCESS" $gitlab_token;
+  "SUCCESS" "Bearer $gitlab_token";
 }
 
 # if not Authorization header provided - use SSL authorization
