--- a/templates/service/service.yaml.erb
+++ b/templates/service/service.yaml.erb
@@ -102,8 +102,24 @@ networks:
 <% if @project_volumes -%>
 
 volumes:
-<%   Array(@project_volumes).each do |vol| -%>
+<%   @project_volumes.each do |vol| -%>
+<%     if vol.is_a?(String) -%>
   <%= vol %>:
+<%     else -%>
+<%       vol.each do |name, config| -%>
+  <%= name %>:
+<%         config.each do |key, value| -%>
+<%           if value.is_a?(Hash) -%>
+    <%= key %>:
+<%             value.each do |subkey, subvalue| -%>
+      <%= subkey %>: "<%= subvalue %>"
+<%             end -%>
+<%           else -%>
+    <%= key %>: <%= value %>
+<%           end -%>
+<%         end -%>
+<%       end -%>
+<%     end -%>
 <%   end -%>
 <% end -%>
 <% if @project_secrets_final -%>
