Add support for project_volumes with labels as array in webservice_spec and update service.yaml.erb template

--- a/templates/service/service.yaml.erb
+++ b/templates/service/service.yaml.erb
@@ -114,6 +114,11 @@ volumes:
 <%             value.each do |subkey, subvalue| -%>
       <%= subkey %>: "<%= subvalue %>"
 <%             end -%>
+<%           elsif value.is_a?(Array) -%>
+    <%= key %>:
+<%             value.each do |item| -%>
+      - "<%= item %>"
+<%             end -%>
 <%           else -%>
     <%= key %>: <%= value %>
 <%           end -%>
